# desert-patterns

./: .gitignore  CLAUDE.md  README.md  SOFTWARE_PLAN.md  gradio_workbench_usage.md  pyproject.toml
.claude/agents/: clustering-analysis.md  data-pipeline.md  feature-extraction.md  visualization-export.md
configs/: clustering_config.yaml  data_config.yaml  feature_config.yaml  visualization_config.yaml
scripts/: extract_features.py  generate_figures.py  ingest_data.py  launch_explorer.py  preprocess_data.py  run_clustering.py  run_inference.py
src/clustering/: cluster_characterization.py  cluster_discovery.py  continuous_space.py  dimensionality_reduction.py  temporal_analysis.py
src/features/: dino_embeddings.py  feature_curation.py  feature_store.py  fusion.py  texture_descriptors.py
src/inference/: __init__.py  batch_predict.py  predict.py
src/utils/: exif.py  io.py
src/visualization/: cluster_galleries.py  embedding_plots.py  style.py  temporal_plots.py
tests/: conftest.py  test_batch_predict.py  test_cluster_characterization.py  test_cluster_discovery.py  test_cluster_galleries.py  test_continuous_space.py  test_dimensionality_reduction.py  test_dino_embeddings.py  test_embedding_plots.py  test_feature_curation.py  test_feature_store.py  test_fusion.py  test_ground_masking.py  test_io.py  test_metadata.py  test_model_persistence.py  test_predict.py  test_preprocessing.py  test_quality.py  test_style.py  test_temporal_analysis.py  test_temporal_plots.py  test_texture_descriptors.py  test_tiling.py
